--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -276,7 +276,7 @@
   reading: "[sync](readings/sync.html) §1, 2-7, 8-9"
   slides: yes
   slides_prelim: yes
-  slides_extra: yes
+  slides_see2: 20230330
   description: |
     *  creating new threads
     *  thread use examples
@@ -291,6 +291,9 @@
 - date: 2023-03-30
   week: 11
   title: synchronization 2 
+  slides: yes
+  slides_prelim: yes
+  slides_extra: yes
   description: |
    *  locks and mutexes
    *  barriers
