--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -214,6 +214,7 @@
   comments: "FIXME: needs more infrastructure for second optional approach"
   comments: "SHOULD HAVE ADDTL REQUIRED APPROACH"
   comments: "Non-DP example?"
+  submit_file: dp.c
   due: 2023-04-05
 
 - name: life
