--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -378,20 +378,20 @@
 
 - date: 2023-04-20
   week: 14
-  title: out-of-order 2 
+  title: out-of-order 2  / buses
   description: |
     *  reorder buffer and exceptions
 
-- date: 2023-04-25
-  week: 15
-  title: buses / side channels
-  reading: "[[buses](readings/bus.html)"
-  description: |
     *  buses, full/half-duplex
-      *  relationship to networking
+      *  relationship   to networking
     *  connecting to I/O devices
     *  DMA
 
+- date: 2023-04-25
+  week: 15
+  title: side channels
+  reading: "[buses](readings/bus.html)"
+  description: |
     *  time and equality testing
     *  in the cache
     *   meltdown:
