--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -420,6 +420,8 @@
 - date: 2023-05-02
   week: 16
   title: Exam Review
+  description: |
+    [notes](recordings/20230502-notes.txt)
 
 - date: 2023-05-03
   week: 16
